--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,8 @@
 {
   "extends": [
-    "config:js-lib"
+    "config:js-app"
   ],
+  "includeForks": true,
   "prConcurrentLimit": 2,
   "semanticCommits": "enabled",
   "labels": [
