renovate[bot] research

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,11 @@
   },
   "packageRules": [
     {
+        "matchPackageNames": [ "typescript" ],
+        "matchUpdateTypes": [ "major", "minor" ],
+        "enabled": false
+    },
+    {
       "matchPackagePatterns": [ "*" ],
       "matchUpdateTypes": [ "minor", "patch" ],
       "automerge": true
